--- a/home/index.html
+++ b/home/index.html
@@ -25,8 +25,8 @@
       width: 100%;
     }
 
-     header {
-      position: fixed;
+    header {
+      position: absolute;
       top: 0;
       left: 0;
       width: 100%;
@@ -35,12 +35,13 @@
       justify-content: space-between;
       align-items: center;
       padding: 8px 16px;
-      background-color: white;
-      z-index: 1200;
-      border-bottom: 1px solid #ccc;
+      background-color: transparent;
+      z-index: 10;
+      border-bottom: none;
+      pointer-events: none;
   }
 
-      .logo-container {
+    .logo-container {
       display: flex;
       align-items: center;
       height: 64px;
@@ -613,205 +614,6 @@
       <div style="font-size: 16px; margin-top: 4px;">$49.99 USD</div>
     </div>
   `;
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Matt Scianna</title>
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Cardo:wght@700;900&display=swap" rel="stylesheet" />
-  <style>
-    * {
-      margin: 0; padding: 0; box-sizing: border-box;
-    }
-    html, body {
-      overflow-x: hidden;
-      background: white;
-      font-family: 'Oswald', sans-serif;
-      user-select: none;
-    }
-    body.sidebar-open, body.cart-open {
-      overflow: hidden;
-      position: fixed;
-      width: 100%;
-    }
-    header {
-      position: fixed;
-      top: 0; left: 0; width: 100%;
-      height: 64px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 8px 16px;
-      background: white;
-      z-index: 1200;
-      border-bottom: 1px solid #ccc;
-    }
-    .logo-container {
-      display: flex;
-      align-items: center;
-      height: 64px;
-      cursor: pointer;
-      user-select: none;
-      margin: 0 auto;
-      margin-top: -64px;
-      line-height: 1;
-    }
-    .logo-text {
-      font-family: 'Cardo', serif;
-      font-size: 26px;
-      font-weight: 900;
-      white-space: nowrap;
-      color: black;
-      transition: all 0.3s ease;
-      display: block;
-    }
-    .logo-image {
-      height: 40px;
-      display: none;
-      transition: all 0.3s ease;
-    }
-    .scrolled .logo-text {
-      display: none;
-    }
-    .scrolled .logo-image {
-      display: block;
-    }
-    .icon-btn.menu-toggle {
-      width: 24px;
-      height: 24px;
-      position: relative;
-      cursor: pointer;
-      margin-top: 4px;
-      user-select: none;
-    }
-    .icon-btn.menu-toggle span {
-      position: absolute;
-      height: 3px;
-      width: 100%;
-      background-color: black;
-      left: 0;
-      transition: 0.3s ease;
-      border-radius: 2px;
-    }
-    .icon-btn.menu-toggle span:nth-child(1) { top: 4px; }
-    .icon-btn.menu-toggle span:nth-child(2) { top: 10px; }
-    .icon-btn.menu-toggle span:nth-child(3) { top: 16px; }
-    .icon-btn.menu-toggle.open span:nth-child(1) {
-      top: 10px;
-      transform: rotate(45deg);
-    }
-    .icon-btn.menu-toggle.open span:nth-child(2) {
-      opacity: 0;
-    }
-    .icon-btn.menu-toggle.open span:nth-child(3) {
-      top: 10px;
-      transform: rotate(-45deg);
-    }
-    .icon-btn.cart-toggle {
-      width: 25px;
-      height: 24px;
-      position: relative;
-      cursor: pointer;
-      margin-top: -1px;
-      user-select: none;
-    }
-    .icon-btn.cart-toggle img {
-      width: 100%;
-      height: auto;
-      transition: opacity 0.3s ease;
-      pointer-events: none;
-    }
-    .icon-btn.cart-toggle.open::before,
-    .icon-btn.cart-toggle.open::after {
-      content: "";
-      position: absolute;
-      width: 24px;
-      height: 2.5px;
-      background: black;
-      top: 11px;
-      left: 0;
-      transform-origin: center;
-      transition: 0.3s ease;
-      border-radius: 2px;
-    }
-    .icon-btn.cart-toggle.open::before { transform: rotate(45deg); }
-    .icon-btn.cart-toggle.open::after { transform: rotate(-45deg); }
-    .icon-btn.cart-toggle.open img { opacity: 0; }
-    .cart-count {
-      position: absolute;
-      top: -6px;
-      right: -6px;
-      color: black;
-      font-size: 10px;
-      font-family: 'Oswald', sans-serif;
-      display: none;
-      user-select: none;
-    }
-    /* Sidebar and cart sidebar */
-    .sidebar, .cart-sidebar {
-      position: fixed;
-      top: 0;
-      background: white;
-      font-family: 'Oswald', sans-serif;
-      font-weight: 400;
-      font-size: 24px;
-      transition: transform 0.4s ease-in-out;
-      z-index: 1100;
-      overflow-y: auto;
-      height: 100vh;
-      text-align: center;
-      padding-top: 80px;
-    }
-    .sidebar {
-      left: 0;
-      width: 100vw;
-      transform: translateX(-100%);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-    .sidebar.open {
-      transform: translateX(0);
-    }
-    .cart-sidebar {
-      right: 0;
-      width: 50vw;
-      max-width: 280px;
-      padding: 80px 20px;
-      transform: translateX(100%);
-      text-align: left;
-    }
-    .cart-sidebar.open {
-      transform: translateX(0);
-    }
-  </style>
-</head>
-<body>
-
-<header>
-  <div id="menuToggle" class="icon-btn menu-toggle" role="button" tabindex="0" aria-label="Toggle menu" aria-expanded="false">
-    <span></span><span></span><span></span>
-  </div>
-
-  <div class="logo-container" id="logoContainer" role="button" tabindex="0" aria-label="Scroll to top">
-    <span class="logo-text" id="logoText">MATT SCIANNA</span>
-    <img src="https://github.com/mattscianna/mattscianna/blob/main/ms-logo.png?raw=true" class="logo-image" id="logoImage" alt="MS Logo" />
-  </div>
-
-  <div id="cartIcon" class="icon-btn cart-toggle" title="Cart" role="button" tabindex="0" aria-label="Toggle cart" aria-expanded="false">
-    <img src="https://cdn-icons-png.flaticon.com/512/1170/1170678.png" alt="Bag" />
-    <div id="cartCount" class="cart-count">0</div>
-  </div>
-</header>
-
-<nav id="sidebar" class="sidebar" aria-label="Main navigation" aria-hidden="true">
-  <!-- Your sidebar content -->
-</nav>
-
-<nav id="cartSidebar" class="cart-sidebar" aria-label="Shopping cart" aria-hidden="true">
-  <!-- Your cart sidebar content -->
-</nav>
 
 <script>
   const menuToggle = document.getElementById('menuToggle');
