--- a/home/index.html
+++ b/home/index.html
@@ -177,7 +177,8 @@
     .image-box {
       margin-top: 0;
       width: 100%;
-      height: 400px;
+      max-width: 600px; /* optional max width */
+      aspect-ratio: 3 / 4; /* width : height ratio */
       background: black;
       overflow: hidden;
       position: relative;
@@ -188,11 +189,12 @@
       display: flex;
       width: 300%;
       transition: transform 0.5s ease-in-out;
+      height: 100%; /* fill container height */
     }
 
     .slide {
       flex: 0 0 100%;
-      height: 400px;
+      height: 100%; /* fill container height */
       background-size: cover;
       background-position: center;
     }
@@ -207,8 +209,9 @@
       border-width: 0 3px 3px 0;
       padding: 6px;
       cursor: pointer;
-      z-index: 2;
+      z-index: 20;  /* increased from 2 */
       user-select: none;
+      background-color: rgba(255, 255, 255, 0.1); /* optional: see clickable area */
     }
 
     .arrow.left {
