--- a/home/index.html
+++ b/home/index.html
@@ -2,12 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Matt Scianna</title>
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Cardo:wght@700;900&display=swap" rel="stylesheet" />
   <style>
-    /* ... all your CSS combined here ... */
-
     * {
       margin: 0;
       padding: 0;
@@ -19,6 +17,7 @@
       background-color: white;
       font-family: 'Oswald', sans-serif;
       user-select: none;
+      height: 100%;
     }
 
     body.sidebar-open, body.cart-open {
@@ -28,7 +27,7 @@
     }
 
     header {
-      position: absolute;
+      position: fixed;
       top: 0;
       left: 0;
       width: 100%;
@@ -38,7 +37,7 @@
       align-items: center;
       padding: 8px 16px;
       background-color: transparent;
-      z-index: 10;
+      z-index: 1500;
       pointer-events: none;
     }
 
@@ -46,188 +45,71 @@
     .icon-btn.cart-toggle,
     .logo-container {
       pointer-events: auto;
+      cursor: pointer;
+      user-select: none;
     }
 
     .logo-container {
       display: flex;
       align-items: center;
       height: 64px;
-      cursor: pointer;
-      user-select: none;
       margin: 0 auto;
-      margin-top: -64px;
       line-height: 1;
       font-size: 24px;
+      color: black;
     }
 
-    /* Keep MATT SCIANNA text logo always visible */
     .logo-text {
       font-family: 'Cardo', serif;
       font-size: 26px;
       font-weight: 900;
-      line-height: 1;
       white-space: nowrap;
-      margin-top: 0;
       user-select: none;
-      transition: all 0.3s ease;
-      color: white;
-      display: block;
       position: relative;
-      top: 53%;
+      top: 3px;
     }
 
     .logo-image {
       height: 88px;
       display: none;
-      cursor: pointer;
       user-select: none;
     }
 
+    /* Hamburger menu icon */
     .icon-btn.menu-toggle {
       width: 24px;
       height: 24px;
       position: relative;
-      cursor: pointer;
-      margin-top: 4px;
-      margin-left: 0;
-      user-select: none;
     }
 
-    /* Hamburger lines */
     .icon-btn.menu-toggle span {
       position: absolute;
       height: 3px;
       width: 100%;
-      background-color: white;
+      background-color: black;
       left: 0;
-      transition: 0.3s ease;
       border-radius: 2px;
+      transition: 0.3s ease;
     }
 
     .icon-btn.menu-toggle span:nth-child(1) { top: 4px; }
     .icon-btn.menu-toggle span:nth-child(2) { top: 10px; }
     .icon-btn.menu-toggle span:nth-child(3) { top: 16px; }
 
-    /* Transform hamburger to X */
-    .icon-btn.menu-toggle.open span:nth-child(1) {
-      top: 10px;
-      transform: rotate(45deg);
-    }
-
-    .icon-btn.menu-toggle.open span:nth-child(2) {
-      opacity: 0;
-    }
-
-    .icon-btn.menu-toggle.open span:nth-child(3) {
-      top: 10px;
-      transform: rotate(-45deg);
-    }
-
+    /* Cart bag icon */
     .icon-btn.cart-toggle {
       width: 25px;
       height: 24px;
       position: relative;
-      cursor: pointer;
-      margin-top: -1px;
-      user-select: none;
     }
 
     .icon-btn.cart-toggle img {
       width: 100%;
       height: auto;
-      transition: opacity 0.3s ease;
-      pointer-events: none;
-      filter: brightness(0) invert(1);
+      filter: brightness(0) invert(0);
     }
 
-    /* Cart icon to X */
-    .icon-btn.cart-toggle.open::before,
-    .icon-btn.cart-toggle.open::after {
-      content: "";
-      position: absolute;
-      width: 24px;
-      height: 2.5px;
-      background: white;
-      top: 11px;
-      left: 0;
-      transform-origin: center;
-      transition: 0.3s ease;
-      border-radius: 2px;
-    }
-
-    .icon-btn.cart-toggle.open::before {
-      transform: rotate(45deg);
-    }
-
-    .icon-btn.cart-toggle.open::after {
-      transform: rotate(-45deg);
-    }
-
-    .icon-btn.cart-toggle.open img {
-      opacity: 0;
-    }
-
-    .cart-count {
-      position: absolute;
-      top: -6px;
-      right: -6px;
-      color: black;
-      font-size: 10px;
-      font-family: 'Oswald', sans-serif;
-      display: none;
-      user-select: none;
-    }
-
-    .image-box {
-      margin-top: 0;
-      width: 100%;
-      max-width: 600px;
-      aspect-ratio: 3 / 4;
-      background: black;
-      overflow: hidden;
-      position: relative;
-      z-index: 1;
-    }
-
-    .slider {
-      display: flex;
-      width: 300%;
-      transition: transform 0.5s ease-in-out;
-      height: 100%;
-    }
-
-    .slide {
-      flex: 0 0 100%;
-      height: 100%;
-      background-size: cover;
-      background-position: center;
-    }
-
-    .arrow {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      width: 18px;
-      height: 18px;
-      border: solid white;
-      border-width: 0 3px 3px 0;
-      padding: 6px;
-      cursor: pointer;
-      z-index: 20;
-      user-select: none;
-      background-color: rgba(255, 255, 255, 0.1);
-    }
-
-    .arrow.left {
-      left: 10px;
-      transform: translateY(-50%) rotate(135deg);
-    }
-
-    .arrow.right {
-      right: 10px;
-      transform: translateY(-50%) rotate(-45deg);
-    }
-
+    /* Sidebars */
     .sidebar, .cart-sidebar {
       position: fixed;
       top: 0;
@@ -236,22 +118,26 @@
       font-weight: 400;
       font-size: 24px;
       transition: transform 0.4s ease-in-out;
-      z-index: 1100;
+      z-index: 1400;
       overflow-y: auto;
       height: 100vh;
       text-align: center;
       padding-top: 80px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
 
+    /* Sidebar (left) */
     .sidebar {
       left: 0;
       width: 100vw;
+      max-width: 320px;
       padding-left: 0;
       padding-right: 0;
       transform: translateX(-100%);
       display: flex;
       flex-direction: column;
       align-items: center;
+      position: fixed;
     }
 
     .sidebar.open {
@@ -368,30 +254,7 @@
       border-bottom: 1px solid black;
     }
 
-    .product-image-box,
-    .product-info {
-      opacity: 0;
-      animation: fadeIn 1s ease forwards;
-      animation-delay: 0.3s;
-    }
-
-    @keyframes fadeIn {
-      to {
-        opacity: 1;
-      }
-    }
-
-    @media (max-width: 767px) {
-      .sidebar nav a {
-        text-align: center;
-        display: inline-block;
-      }
-
-      .policies-dropdown {
-        margin-left: 0;
-      }
-    }
-
+    /* Cart sidebar (right) */
     .cart-sidebar {
       right: 0;
       width: 50vw;
@@ -404,14 +267,48 @@
       top: 0;
       height: 100vh;
       overflow-y: auto;
-      z-index: 1100;
+      z-index: 1400;
       transition: transform 0.4s ease-in-out;
+      box-shadow: -2px 0 10px rgba(0,0,0,0.1);
     }
 
     .cart-sidebar.open {
       transform: translateX(0);
     }
 
+    /* X close buttons inside sidebars */
+    .sidebar .close-btn,
+    .cart-sidebar .close-btn {
+      position: absolute;
+      top: 18px;
+      right: 16px;
+      width: 24px;
+      height: 24px;
+      cursor: pointer;
+      user-select: none;
+      z-index: 1600;
+    }
+
+    .close-btn:before,
+    .close-btn:after {
+      content: '';
+      position: absolute;
+      left: 11px;
+      top: 0;
+      width: 2px;
+      height: 24px;
+      background-color: black;
+    }
+
+    .close-btn:before {
+      transform: rotate(45deg);
+    }
+
+    .close-btn:after {
+      transform: rotate(-45deg);
+    }
+
+    /* Product image and info (from your original code) */
     .product-image-box {
       width: 90vw;
       max-width: 600px;
@@ -469,9 +366,65 @@
       color: black;
     }
 
-    @media (min-width: 768px) {
-      header {
-        display: flex;
+    /* Slider and arrows */
+    .image-box {
+      margin-top: 64px;
+      width: 100%;
+      max-width: 600px;
+      aspect-ratio: 3 / 4;
+      background: black;
+      overflow: hidden;
+      position: relative;
+      z-index: 1;
+    }
+
+    .slider {
+      display: flex;
+      width: 300%;
+      transition: transform 0.5s ease-in-out;
+      height: 100%;
+    }
+
+    .slide {
+      flex: 0 0 100%;
+      height: 100%;
+      background-size: cover;
+      background-position: center;
+    }
+
+    .arrow {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 18px;
+      height: 18px;
+      border: solid white;
+      border-width: 0 3px 3px 0;
+      padding: 6px;
+      cursor: pointer;
+      z-index: 20;
+      user-select: none;
+      background-color: rgba(255, 255, 255, 0.1);
+    }
+
+    .arrow.left {
+      left: 10px;
+      transform: translateY(-50%) rotate(135deg);
+    }
+
+    .arrow.right {
+      right: 10px;
+      transform: translateY(-50%) rotate(-45deg);
+    }
+
+    @media (max-width: 767px) {
+      .sidebar nav a {
+        text-align: center;
+        display: inline-block;
+      }
+
+      .policies-dropdown {
+        margin-left: 0;
       }
     }
   </style>
@@ -485,19 +438,19 @@
     <span></span>
   </div>
 
-  <div class="logo-container" id="logoContainer" role="button" tabindex="0" aria-label="Reload page">
+  <div class="logo-container" id="logoContainer" role="button" tabindex="0" aria-label="Reload home page">
     <span class="logo-text" id="logoText">MATT SCIANNA</span>
     <img src="https://github.com/mattscianna/mattscianna/blob/main/ms-logo.png?raw=true" class="logo-image" id="logoImage" alt="MS Logo" />
   </div>
 
   <div id="cartIcon" class="icon-btn cart-toggle" title="Cart" role="button" tabindex="0" aria-label="Toggle cart" aria-expanded="false">
     <img src="https://cdn-icons-png.flaticon.com/512/1170/1170678.png" alt="Bag" />
-    <div id="cartCount" class="cart-count">0</div>
+    <div id="cartCount" class="cart-count" style="display:none;">0</div>
   </div>
 </header>
 
-<div class="image-box">
-  <div class="slider" id="slider" aria-live="polite">
+<div class="image-box" aria-live="polite" aria-label="Product image slider">
+  <div class="slider" id="slider">
     <div class="slide" style="background-image: url('https://via.placeholder.com/600x400/FF5733');" role="img" aria-label="Slide 1"></div>
     <div class="slide" style="background-image: url('https://via.placeholder.com/600x400/33C3FF');" role="img" aria-label="Slide 2"></div>
     <div class="slide" style="background-image: url('https://via.placeholder.com/600x400/8D33FF');" role="img" aria-label="Slide 3"></div>
@@ -527,6 +480,7 @@
 </div>
 
 <nav id="sidebar" class="sidebar" aria-label="Main navigation" aria-hidden="true">
+  <div class="close-btn" role="button" tabindex="0" aria-label="Close menu sidebar"></div>
   <nav>
     <a href="https://mattscianna.com/home" class="current">HOME</a>
     <a href="https://mattscianna.com/lookbooks">LOOKBOOKS</a>
@@ -542,6 +496,7 @@
 </nav>
 
 <nav id="cartSidebar" class="cart-sidebar" aria-label="Shopping cart" aria-hidden="true">
+  <div class="close-btn" role="button" tabindex="0" aria-label="Close cart sidebar"></div>
   <!-- Cart sidebar content is dynamically inserted -->
 </nav>
 
@@ -549,8 +504,10 @@
   // DOM elements
   const menuToggle = document.getElementById('menuToggle');
   const sidebar = document.getElementById('sidebar');
+  const sidebarCloseBtn = sidebar.querySelector('.close-btn');
   const cartIcon = document.getElementById('cartIcon');
   const cartSidebar = document.getElementById('cartSidebar');
+  const cartCloseBtn = cartSidebar.querySelector('.close-btn');
   const logoContainer = document.getElementById('logoContainer');
 
   let currentSlide = 0;
@@ -558,147 +515,139 @@
   const slides = slider.children;
   const totalSlides = slides.length;
 
-  // Keep MATT SCIANNA logo visible (no fade)
-  // Removed scroll event related to logo fading
-
-  // Scroll to top on logo click
+  // Clicking logo reloads home page
   logoContainer.addEventListener('click', () => {
-    window.scrollTo({ top: 0, behavior: 'smooth' });
+    window.location.href = '/';
   });
 
-  // Toggle sidebar open/close with mutual exclusivity
-  menuToggle.addEventListener('click', () => {
-    const isSidebarOpen = sidebar.classList.contains('open');
-    const isCartOpen = cartSidebar.classList.contains('open');
+  // Sidebar open/close functions
+  function closeCart() {
+    cartSidebar.classList.remove('open');
+    cartIcon.setAttribute('aria-expanded', 'false');
+    cartSidebar.setAttribute('aria-hidden', 'true');
+    document.body.classList.remove('cart-open');
+  }
 
-    if (isSidebarOpen) {
-      closeSidebar();
+  function closeMenu() {
+    sidebar.classList.remove('open');
+    menuToggle.setAttribute('aria-expanded', 'false');
+    sidebar.setAttribute('aria-hidden', 'true');
+    document.body.classList.remove('sidebar-open');
+  }
+
+  function openMenu() {
+    // Close cart if open
+    if (cartSidebar.classList.contains('open')) {
+      closeCart();
+    }
+    sidebar.classList.add('open');
+    menuToggle.setAttribute('aria-expanded', 'true');
+    sidebar.setAttribute('aria-hidden', 'false');
+    document.body.classList.add('sidebar-open');
+  }
+
+  function openCart() {
+    // Close menu if open
+    if (sidebar.classList.contains('open')) {
+      closeMenu();
+    }
+    cartSidebar.classList.add('open');
+    cartIcon.setAttribute('aria-expanded', 'true');
+    cartSidebar.setAttribute('aria-hidden', 'false');
+    document.body.classList.add('cart-open');
+  }
+
+  // Toggle menu sidebar
+  menuToggle.addEventListener('click', () => {
+    if (sidebar.classList.contains('open')) {
+      closeMenu();
     } else {
-      if (isCartOpen) closeCart();
-      openSidebar();
+      openMenu();
     }
   });
 
+  // Toggle cart sidebar
   cartIcon.addEventListener('click', () => {
-    const isCartOpen = cartSidebar.classList.contains('open');
-    const isSidebarOpen = sidebar.classList.contains('open');
-
-    if (isCartOpen) {
+    if (cartSidebar.classList.contains('open')) {
       closeCart();
     } else {
-      if (isSidebarOpen) closeSidebar();
       openCart();
     }
   });
 
-  // Keyboard accessibility for toggles
-  menuToggle.addEventListener('keydown', (e) => {
+  // Close buttons inside sidebars
+  sidebarCloseBtn.addEventListener('click', closeMenu);
+  cartCloseBtn.addEventListener('click', closeCart);
+
+  // Keyboard accessibility for close buttons
+  sidebarCloseBtn.addEventListener('keydown', e => {
     if (e.key === 'Enter' || e.key === ' ') {
       e.preventDefault();
-      menuToggle.click();
+      closeMenu();
     }
   });
 
-  cartIcon.addEventListener('keydown', (e) => {
+  cartCloseBtn.addEventListener('keydown', e => {
     if (e.key === 'Enter' || e.key === ' ') {
       e.preventDefault();
-      cartIcon.click();
+      closeCart();
     }
   });
-
-  function openSidebar() {
-    sidebar.classList.add('open');
-    menuToggle.classList.add('open');
-    cartIcon.classList.remove('open');
-    cartSidebar.classList.remove('open');
-    menuToggle.setAttribute('aria-expanded', 'true');
-    cartIcon.setAttribute('aria-expanded', 'false');
-    document.body.classList.add('sidebar-open');
-    document.body.classList.remove('cart-open');
-    sidebar.setAttribute('aria-hidden', 'false');
-    cartSidebar.setAttribute('aria-hidden', 'true');
-  }
-
-  function closeSidebar() {
-    sidebar.classList.remove('open');
-    menuToggle.classList.remove('open');
-    menuToggle.setAttribute('aria-expanded', 'false');
-    document.body.classList.remove('sidebar-open');
-    sidebar.setAttribute('aria-hidden', 'true');
-  }
-
-  function openCart() {
-    cartSidebar.classList.add('open');
-    cartIcon.classList.add('open');
-    menuToggle.classList.remove('open');
-    sidebar.classList.remove('open');
-    cartIcon.setAttribute('aria-expanded', 'true');
-    menuToggle.setAttribute('aria-expanded', 'false');
-    document.body.classList.add('cart-open');
-    document.body.classList.remove('sidebar-open');
-    cartSidebar.setAttribute('aria-hidden', 'false');
-    sidebar.setAttribute('aria-hidden', 'true');
-  }
-
-  function closeCart() {
-    cartSidebar.classList.remove('open');
-    cartIcon.classList.remove('open');
-    cartIcon.setAttribute('aria-expanded', 'false');
-    document.body.classList.remove('cart-open');
-    cartSidebar.setAttribute('aria-hidden', 'true');
-  }
 
   // Policies dropdown toggle
   const policiesLink = document.getElementById('policiesLink');
   const policiesDropdown = document.getElementById('policiesDropdown');
 
-  policiesLink.addEventListener('click', (e) => {
+  policiesLink.addEventListener('click', e => {
     e.preventDefault();
-    const isOpen = policiesDropdown.classList.contains('open');
-
-    if (isOpen) {
-      policiesDropdown.classList.remove('open');
+    const expanded = policiesLink.getAttribute('aria-expanded') === 'true';
+    if (expanded) {
+      policiesLink.setAttribute('aria-expanded', 'false');
       policiesLink.classList.remove('arrow-open');
       policiesLink.classList.add('arrow-closed');
-      policiesLink.setAttribute('aria-expanded', 'false');
+      policiesDropdown.classList.remove('open');
       policiesDropdown.setAttribute('aria-hidden', 'true');
     } else {
-      policiesDropdown.classList.add('open');
+      policiesLink.setAttribute('aria-expanded', 'true');
       policiesLink.classList.remove('arrow-closed');
       policiesLink.classList.add('arrow-open');
-      policiesLink.setAttribute('aria-expanded', 'true');
+      policiesDropdown.classList.add('open');
       policiesDropdown.setAttribute('aria-hidden', 'false');
     }
   });
 
-  // Simple slider controls
+  // Slider functions
   function showSlide(index) {
-    if (index < 0) index = totalSlides - 1;
-    if (index >= totalSlides) index = 0;
-    currentSlide = index;
-    slider.style.transform = `translateX(-${index * 100}%)`;
-  }
-
-  function nextSlide() {
-    showSlide(currentSlide + 1);
+    if (index < 0) {
+      currentSlide = totalSlides - 1;
+    } else if (index >= totalSlides) {
+      currentSlide = 0;
+    } else {
+      currentSlide = index;
+    }
+    slider.style.transform = `translateX(-${currentSlide * 100}%)`;
   }
 
   function prevSlide() {
     showSlide(currentSlide - 1);
   }
 
-  // Accessibility for arrows
+  function nextSlide() {
+    showSlide(currentSlide + 1);
+  }
+
+  // Keyboard controls for slider arrows
   document.querySelectorAll('.arrow').forEach(arrow => {
-    arrow.addEventListener('keydown', (e) => {
+    arrow.addEventListener('keydown', e => {
       if (e.key === 'Enter' || e.key === ' ') {
         e.preventDefault();
         if (arrow.classList.contains('left')) prevSlide();
-        if (arrow.classList.contains('right')) nextSlide();
+        else nextSlide();
       }
     });
   });
 
-  // Initialize slider
+  // Initialize first slide
   showSlide(0);
 </script>
 
