--- a/home/index.html
+++ b/home/index.html
@@ -14,7 +14,7 @@
 
     html, body {
       overflow-x: hidden;
-      background-color: white;
+      background-color: black;
       font-family: 'Oswald', sans-serif;
       user-select: none;
       height: 100%;
@@ -37,26 +37,27 @@
       align-items: center;
       padding: 8px 16px;
       background-color: transparent;
-      z-index: 1500;
+      z-index: 1600;
       pointer-events: none;
     }
 
     .icon-btn.menu-toggle,
     .icon-btn.cart-toggle,
+    .icon-btn.search-toggle,
     .logo-container {
       pointer-events: auto;
       cursor: pointer;
       user-select: none;
+      color: white;
+      display: flex;
+      align-items: center;
     }
 
     .logo-container {
-      display: flex;
-      align-items: center;
-      height: 64px;
       margin: 0 auto;
-      line-height: 1;
       font-size: 24px;
-      color: black;
+      color: white;
+      user-select: none;
     }
 
     .logo-text {
@@ -64,15 +65,16 @@
       font-size: 26px;
       font-weight: 900;
       white-space: nowrap;
-      user-select: none;
       position: relative;
       top: 3px;
+      color: white;
     }
 
     .logo-image {
       height: 88px;
       display: none;
       user-select: none;
+      filter: brightness(0) invert(1);
     }
 
     /* Hamburger menu icon */
@@ -86,7 +88,7 @@
       position: absolute;
       height: 3px;
       width: 100%;
-      background-color: black;
+      background-color: white;
       left: 0;
       border-radius: 2px;
       transition: 0.3s ease;
@@ -100,30 +102,46 @@
     .icon-btn.cart-toggle {
       width: 25px;
       height: 24px;
+      margin-left: 16px;
       position: relative;
     }
 
     .icon-btn.cart-toggle img {
       width: 100%;
       height: auto;
-      filter: brightness(0) invert(0);
+      filter: brightness(0) invert(1);
+    }
+
+    /* Search icon */
+    .icon-btn.search-toggle {
+      width: 24px;
+      height: 24px;
+      margin-left: 16px;
+      position: relative;
+    }
+
+    .icon-btn.search-toggle svg {
+      fill: white;
+      width: 100%;
+      height: 100%;
     }
 
     /* Sidebars */
     .sidebar, .cart-sidebar {
       position: fixed;
       top: 0;
-      background: white;
+      background: black;
+      color: white;
       font-family: 'Oswald', sans-serif;
       font-weight: 400;
       font-size: 24px;
       transition: transform 0.4s ease-in-out;
-      z-index: 1400;
+      z-index: 1700;
       overflow-y: auto;
       height: 100vh;
       text-align: center;
       padding-top: 80px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      box-shadow: 0 0 20px rgba(0,0,0,0.8);
     }
 
     /* Sidebar (left) */
@@ -138,6 +156,7 @@
       flex-direction: column;
       align-items: center;
       position: fixed;
+      background-color: black;
     }
 
     .sidebar.open {
@@ -155,7 +174,7 @@
     }
 
     .sidebar nav a {
-      color: black;
+      color: white;
       text-decoration: none;
       font-size: 24px;
       font-weight: 400;
@@ -173,16 +192,17 @@
 
     .sidebar nav a:hover {
       border-bottom-color: currentColor;
+      color: #ccc;
     }
 
     .sidebar nav a.current {
-      color: #555555;
+      color: #888;
       font-weight: 550;
-      border-bottom-color: #555555;
+      border-bottom-color: #888;
     }
 
     .sidebar nav a.current:hover {
-      border-bottom-color: #555555;
+      border-bottom-color: #aaa;
     }
 
     .sidebar nav a.policies-link::after {
@@ -193,8 +213,8 @@
       transform: translateY(-50%) rotate(90deg);
       width: 10px;
       height: 10px;
-      border-right: 2px solid black;
-      border-bottom: 2px solid black;
+      border-right: 2px solid white;
+      border-bottom: 2px solid white;
       transition: transform 0.3s ease, opacity 0.3s ease;
       opacity: 1;
       pointer-events: none;
@@ -224,7 +244,7 @@
       margin-left: 16px;
       font-size: 18px;
       font-weight: 400;
-      color: black;
+      color: white;
       user-select: none;
       text-align: left;
       max-width: 320px;
@@ -238,7 +258,7 @@
     }
 
     .policies-dropdown a {
-      color: black;
+      color: white;
       text-decoration: none;
       border-bottom: 1px solid transparent;
       padding-bottom: 2px;
@@ -251,7 +271,7 @@
     }
 
     .policies-dropdown a:hover {
-      border-bottom: 1px solid black;
+      border-bottom: 1px solid white;
     }
 
     /* Cart sidebar (right) */
@@ -262,31 +282,33 @@
       padding: 80px 20px;
       transform: translateX(100%);
       text-align: left;
-      background: white;
+      background: black;
+      color: white;
       position: fixed;
       top: 0;
       height: 100vh;
       overflow-y: auto;
-      z-index: 1400;
+      z-index: 1700;
       transition: transform 0.4s ease-in-out;
-      box-shadow: -2px 0 10px rgba(0,0,0,0.1);
+      box-shadow: -2px 0 20px rgba(0,0,0,0.8);
     }
 
     .cart-sidebar.open {
       transform: translateX(0);
     }
 
-    /* X close buttons inside sidebars */
+    /* X close buttons inside sidebars placed top-left over menu icon */
     .sidebar .close-btn,
     .cart-sidebar .close-btn {
-      position: absolute;
-      top: 18px;
-      right: 16px;
+      position: fixed;
+      top: 16px;
+      left: 16px;
       width: 24px;
       height: 24px;
       cursor: pointer;
       user-select: none;
-      z-index: 1600;
+      z-index: 1800;
+      background: transparent;
     }
 
     .close-btn:before,
@@ -297,7 +319,7 @@
       top: 0;
       width: 2px;
       height: 24px;
-      background-color: black;
+      background-color: white;
     }
 
     .close-btn:before {
@@ -308,17 +330,18 @@
       transform: rotate(-45deg);
     }
 
-    /* Product image and info (from your original code) */
+    /* Product image and info */
     .product-image-box {
       width: 90vw;
       max-width: 600px;
-      margin: 40px auto 8px auto;
+      margin: 0 auto 8px auto;
       background: none;
       display: flex;
       justify-content: center;
       align-items: center;
       overflow: visible;
       cursor: pointer;
+      margin-top: 120px; /* raised carousel */
     }
 
     .jersey-img {
@@ -338,6 +361,7 @@
       margin-bottom: 24px;
       margin-top: 16px;
       user-select: none;
+      color: white;
     }
 
     .product-title {
@@ -347,28 +371,29 @@
       cursor: pointer;
       transition: border-bottom 0.2s ease;
       user-select: none;
+      color: white;
     }
 
     .product-title:hover {
-      border-bottom: 1.5px solid black;
+      border-bottom: 1.5px solid white;
     }
 
     .product-color {
       font-weight: 400;
       font-size: 16px;
-      color: black;
+      color: white;
       margin-bottom: 4px;
     }
 
     .product-price {
       font-weight: 400;
       font-size: 20px;
-      color: black;
+      color: white;
     }
 
     /* Slider and arrows */
     .image-box {
-      margin-top: 64px;
+      margin-top: 80px; /* raised image */
       width: 100%;
       max-width: 600px;
       aspect-ratio: 3 / 4;
@@ -376,6 +401,8 @@
       overflow: hidden;
       position: relative;
       z-index: 1;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     .slider {
@@ -443,9 +470,17 @@
     <img src="https://github.com/mattscianna/mattscianna/blob/main/ms-logo.png?raw=true" class="logo-image" id="logoImage" alt="MS Logo" />
   </div>
 
-  <div id="cartIcon" class="icon-btn cart-toggle" title="Cart" role="button" tabindex="0" aria-label="Toggle cart" aria-expanded="false">
-    <img src="https://cdn-icons-png.flaticon.com/512/1170/1170678.png" alt="Bag" />
-    <div id="cartCount" class="cart-count" style="display:none;">0</div>
+  <div style="display: flex; align-items: center;">
+    <div id="searchIcon" class="icon-btn search-toggle" role="button" tabindex="0" aria-label="Search">
+      <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+        <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0016 9.5 6.5 6.5 0 109.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zM10 14a4 4 0 110-8 4 4 0 010 8z"/>
+      </svg>
+    </div>
+
+    <div id="cartIcon" class="icon-btn cart-toggle" title="Cart" role="button" tabindex="0" aria-label="Toggle cart" aria-expanded="false">
+      <img src="https://cdn-icons-png.flaticon.com/512/1170/1170678.png" alt="Bag" />
+      <div id="cartCount" class="cart-count" style="display:none;">0</div>
+    </div>
   </div>
 </header>
 
