--- a/home/index.html
+++ b/home/index.html
@@ -14,7 +14,7 @@
 
     html, body {
       overflow-x: hidden;
-      background-color: black;
+      background-color: white;
       font-family: 'Oswald', sans-serif;
       user-select: none;
       height: 100%;
@@ -282,7 +282,7 @@
       padding: 80px 20px;
       transform: translateX(100%);
       text-align: left;
-      background: black;
+      background: white;
       color: white;
       position: fixed;
       top: 0;
