--- a/home/index.html
+++ b/home/index.html
@@ -387,14 +387,15 @@
 
     /* Slider and arrows */
      .image-box {
-      margin-top: 72px; /* just enough to clear the 64px header + 8px space */
+      margin-top: 0px; /* just enough to clear the 64px header + 8px space */
       width: 100%;
+      top: 0;
       max-width: 600px;
       aspect-ratio: 3 / 4;
       background: black;
       overflow: hidden;
       position: relative;
-      z-index: 1;
+      z-index: 0;
       margin-left: auto;
       margin-right: auto;
     }
@@ -460,7 +461,7 @@
   </div>
 
   <div class="logo-container" id="logoContainer" role="button" tabindex="0" aria-label="Reload home page">
-    <img src="https://github.com/mattscianna/mattscianna/blob/main/ms-logo.png?raw=true" class="logo-image" id="logoImage" alt="MS Logo" />
+    <img src="https://github.com/mattscianna/mattscianna/blob/main/ms-logo-WHITE.png?raw=true" class="logo-image" id="logoImage" alt="MS Logo" />
   </div>
 
   <div class="right-icons" style="width: 96px; display: flex; justify-content: flex-end; align-items: center;">
